# custom-debian-iso-creator

./: .dockerignore  .gitignore  Dockerfile  README.md  generate.sh  run.sh  sample-config.yaml  techstack.md  techstack.yml
config/: chroot-commands.bash  packages.backports.list  packages.download-only.list  packages.standard.list
custom-system-files/: README.md
custom-user-files/: README.md
lib/: Dockerfile  functions.bash  generate.py  pyproject.toml
lib/scripts/: _bootstrap_debian.sh  _build_iso.sh  _customize_debian.sh
lib/standard-files/etc/systemd/system/: custom-startup.service
static-post/etc/lightdm/: lightdm.interpolateme.conf
static-post/etc/sudoers.d/: 90-default-user.interpolateme
static-post/etc/udev/rules.d/: 80-startup.rules
static-pre/etc/apt/apt.conf.d/: 02proxy.interpolateme
static-pre/etc/apt/sources.list.d/: backports.list.interpolateme  extras.list.interpolateme  security.list.interpolateme
